Framework tentatively done! Let's fill 'er up with content....

--- a/todo.txt
+++ b/todo.txt
@@ -3,4 +3,4 @@
 * Tasks:
     * Write proper copy
     * Find good quality pictures
-    * Maybe set up markdown parser and json configuration? 
+    * set up square register data
